# njaiyyds.org.cn

./: .gitignore  CNAME  LICENSE.txt  README.txt  about.html  about.html.tml  about.html.tmpl  about.rkt  activity.html  activity.html.tmpl  activity.rkt  build.sh  common.rkt  compress.sh  index.html  index.html.tmpl  index.rkt  make.rkt  service.html  service.html.tmpl  service.rkt  utils.rkt
.github/workflows/: build.yml
assets/css/: main.css
assets/js/: main.js
backend/: main.py  pyproject.toml
html5up-massively/: about.html  index.html
html5up-massively/assets/css/: main.css
public/: index.html
public/assets/css/: main.css
public/assets/js/: main.js
