[tool.poetry]
name = "njai-backend"
version = "0.0.0"
authors = ["Yi Cao <me@ycao.top>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
exif = "^1.6.0"
fastapi = {extras = ["standard"], version = "^0.112.0"}
uvicorn = {extras = ["standard"], version = "^0.30.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
